...

const val MAIN_NEW_TEST_TAG = "main_new_test"
const val MAIN_BOTTOM_BAR_TAG = "main_bottom_bar"
const val NAV_HOME_TAG = "nav_home"
const val NAV_TRENDS_TAG = "nav_trends"
const val NAV_REPORT_TAG = "nav_report"
const val NAV_PROFILE_TAG = "nav_profile"

